[package]
name = "cw-exam"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.1"
serde = "1.0.0"
cw-storage-plus = "0.16"
thiserror = "1.0.0"
schemars = "0.8"
cosmwasm-schema = "1.1"
cw-multi-test = { version = "0.16", optional = true }
cw2 = "0.16"

[dev-dependencies]
cw-multi-test = "0.16"